k8s/overlays/prod/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  annotations:
    metallb.universe.tf/loadBalancerIPs: 172.17.179.205
spec:
  ports:
    - port: 8088
      targetPort: http
      protocol: TCP
      name: http
